--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,11 @@ github-finder/node_modules/
 github-finder/.netlify
 
 contact-keeper/client/node_modules/
+contact-keeper/client/.env.local
+contact-keeper/client/.env.development.local
+contact-keeper/client/.env.test.local
+contact-keeper/client/.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 contact-keeper/node_modules/
